@@ -56,6 +56,9 @@ Extension Modules
 Library
 -------
 
+- Bug #1267547: Put proper recursive setup.py call into the
+  spec file generated by bdist_rpm.
+
 - Bug #1504333: Make sgmllib support angle brackets in quoted attribute
   values.
 
